--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "minimist": "^1.2.0",
     "request": "^2.88.0"
   }
 }
